--- a/canvas.html
+++ b/canvas.html
@@ -42,11 +42,40 @@ ctx.lineTo(160, 100);
 ctx.lineTo(100, 100);
 ctx.fill();*/
 //=====================================
-ctx.lineWidth = 2
+/*ctx.lineWidth = 2
 ctx.strokeStyle = "Green"
 ctx.beginPath()
 ctx.arc(100,50,40,0,Math.PI*2,false)
-ctx.stroke()
+ctx.stroke()*/
+//=====================================
+
+var circle = function (x, y, radius, fillCircle) {
+    if (fillCircle) {
+        ctx.beginPath()
+        ctx.arc(x, y, radius, 0, Math.PI * 2, false)
+        ctx.fill()
+    }
+
+
+    ctx.beginPath()
+    ctx.arc(x, y, radius, 0, Math.PI * 2, false)
+    ctx.stroke()
+}
+ctx.lineWidth = 4
+ctx.strokeStyle = "Red"
+circle(100, 100, 10, true)
+ctx.strokeStyle = "Orange"
+circle(100, 100, 20)
+ctx.strokeStyle = "Yellow"
+circle(100, 100, 30);
+ctx.strokeStyle = "Green";
+circle(100, 100, 40);
+ctx.strokeStyle = "Blue";
+circle(100, 100, 50);
+ctx.strokeStyle = "Purple";
+circle(100, 100, 60);
+
+
 </script>
 </body>
 </html>
