--- a/canvas.html
+++ b/canvas.html
@@ -5,102 +5,115 @@
     <title>Canvas</title>
 </head>
 <body>
-<canvas id="canvas" width="1400" height="1400"></canvas>
+<script src="https://code.jquery.com/jquery-2.1.0.js"></script>
+<canvas id="canvas" width="1400" height="1280"></canvas>
 <script>
-var canvas = document.getElementById("canvas")
-var ctx = canvas.getContext("2d")
-/*for (var i = 0; i < 8; i++) {
-    ctx.fillRect(i * 10, i * 10, 10, 10)
-}
-//=======================================
-/*ctx.fillStyle = "BurlyWood"
-ctx.lineWidth = 4
-ctx.strokeRect(45, 60, 10, 20)
-ctx.fillRect(0, 80, 100, 10)
-ctx.fillRect(25, 10, 50, 50)
-ctx.fillStyle = "BlueViolet"
-ctx.fillRect(23,90,55,55)
-ctx.fillRect(68,140,10,55)
-ctx.fillRect(68,140,10,55)
-ctx.fillRect(23,140,10,55)*/
-//=====================================
-/*ctx.strokeStyle = "Turquoise"
-ctx.lineWidth = 4
-ctx.beginPath()
-ctx.moveTo(10, 10)
-ctx.lineTo(60, 60)
-ctx.moveTo(60, 10)
-ctx.lineTo(10, 60)
-ctx.stroke()*/
-//====================================
-/*ctx.strokeStyle = "Blue";
-ctx.moveTo(100, 100);
-ctx.lineTo(100, 60);
-ctx.lineTo(130, 30);
-ctx.lineTo(160, 60);
-ctx.lineTo(160, 100);
-ctx.lineTo(100, 100);
-ctx.fill();*/
-//=====================================
-/*ctx.lineWidth = 2
-ctx.strokeStyle = "Green"
-ctx.beginPath()
-ctx.arc(100,50,40,0,Math.PI*2,false)
-ctx.stroke()*/
-//=====================================
+    var canvas = document.getElementById("canvas")
+    var ctx = canvas.getContext("2d")
+    /*for (var i = 0; i < 8; i++) {
+        ctx.fillRect(i * 10, i * 10, 10, 10)
+    }
+    //=======================================
+    /*ctx.fillStyle = "BurlyWood"
+    ctx.lineWidth = 4
+    ctx.strokeRect(45, 60, 10, 20)
+    ctx.fillRect(0, 80, 100, 10)
+    ctx.fillRect(25, 10, 50, 50)
+    ctx.fillStyle = "BlueViolet"
+    ctx.fillRect(23,90,55,55)
+    ctx.fillRect(68,140,10,55)
+    ctx.fillRect(68,140,10,55)
+    ctx.fillRect(23,140,10,55)*/
+    //=====================================
+    /*ctx.strokeStyle = "Turquoise"
+    ctx.lineWidth = 4
+    ctx.beginPath()
+    ctx.moveTo(10, 10)
+    ctx.lineTo(60, 60)
+    ctx.moveTo(60, 10)
+    ctx.lineTo(10, 60)
+    ctx.stroke()*/
+    //====================================
+    /*ctx.strokeStyle = "Blue";
+    ctx.moveTo(100, 100);
+    ctx.lineTo(100, 60);
+    ctx.lineTo(130, 30);
+    ctx.lineTo(160, 60);
+    ctx.lineTo(160, 100);
+    ctx.lineTo(100, 100);
+    ctx.fill();*/
+    //=====================================
+    /*ctx.lineWidth = 2
+    ctx.strokeStyle = "Green"
+    ctx.beginPath()
+    ctx.arc(100,50,40,0,Math.PI*2,false)
+    ctx.stroke()*/
+    //=====================================
 
-/*function drawSnowmam(x, y) {
-var coordX = x
-var coordY = y
-    var circle = function (coordX, coordY, radius, fillCircle) {
-    coordX += x
-    coordY += y
-        if (fillCircle) {
+    /*function drawSnowmam(x, y) {
+    var coordX = x
+    var coordY = y
+        var circle = function (coordX, coordY, radius, fillCircle) {
+        coordX += x
+        coordY += y
+            if (fillCircle) {
+                ctx.beginPath()
+                ctx.arc(coordX, coordY, radius, 0, Math.PI * 2, false)
+                ctx.fill()
+            }
+
             ctx.beginPath()
             ctx.arc(coordX, coordY, radius, 0, Math.PI * 2, false)
-            ctx.fill()
+            ctx.stroke()
         }
+        ctx.lineWidth = 5
 
+        circle(250, 100, 60, false)
+        circle(250, 250, 90, false)
+        ctx.lineWidth = 2
+        ctx.fillStyle = "Orange"
+        circle(252, 110, 10, true)
+        ctx.fillStyle = "Black"
+        circle(225, 85, 10, true)
+        circle(275, 85, 10, true)
+        circle(250, 250, 10, true)
+        circle(250, 210, 10, true)
+        circle(250, 290, 10, true)
+    }
+
+    drawSnowmam(50, 50)
+    drawSnowmam(350, 50)
+    drawSnowmam(700, 50)*/
+    //=============================================
+
+    /*var points = [[50, 50], [50, 100], [100, 100], [100, 50], [50, 50]];
+    var mysteryPoints = [[50, 50], [50, 100], [25, 120], [100, 50],
+        [70, 90], [100, 90], [70, 120]]
+
+    function drawPoints(arrPoints, color, lineWidth) {
+        ctx.fillStyle = color
+        ctx.lineWidth = lineWidth
+        ctx.moveTo(arrPoints[0][0], arrPoints[0][1])
+        for (let i = 1; i < arrPoints.length; i++) {
+            ctx.lineTo(arrPoints[i][0], arrPoints[i][1])
+
+        }
+        ctx.fill()
+    }
+
+    //drawPoints(points, "Red", 4);
+    drawPoints(mysteryPoints, "Green", 5)*/
+    //===============================================
+
+    $("html").mousemove(function (event) {
+
+        ctx.lineWidth = 2
+        ctx.strokeStyle = "Blue"
         ctx.beginPath()
-        ctx.arc(coordX, coordY, radius, 0, Math.PI * 2, false)
+        ctx.arc(event.pageX, event.pageY, 50, 0, Math.PI * 2, false)
         ctx.stroke()
-    }
-    ctx.lineWidth = 5
+    })
 
-    circle(250, 100, 60, false)
-    circle(250, 250, 90, false)
-    ctx.lineWidth = 2
-    ctx.fillStyle = "Orange"
-    circle(252, 110, 10, true)
-    ctx.fillStyle = "Black"
-    circle(225, 85, 10, true)
-    circle(275, 85, 10, true)
-    circle(250, 250, 10, true)
-    circle(250, 210, 10, true)
-    circle(250, 290, 10, true)
-}
-
-drawSnowmam(50, 50)
-drawSnowmam(350, 50)
-drawSnowmam(700, 50)*/
-//==================================
-var points = [[50, 50], [50, 100], [100, 100], [100, 50], [50, 50]];
-var mysteryPoints = [[50, 50], [50, 100], [25, 120], [100, 50],
-    [70, 90], [100, 90], [70, 120]]
-
-function drawPoints(arrPoints, color, lineWidth) {
-    ctx.fillStyle = color
-    ctx.lineWidth = lineWidth
-    ctx.moveTo(arrPoints[0][0], arrPoints[0][1])
-    for (let i = 1; i < arrPoints.length; i++) {
-        ctx.lineTo(arrPoints[i][0], arrPoints[i][1])
-
-    }
-    ctx.fill()
-}
-
-//drawPoints(points, "Red", 4);
-drawPoints(mysteryPoints, "Green", 5)
 
 </script>
 </body>
