--- a/ball.html
+++ b/ball.html
@@ -5,17 +5,27 @@
   <title>Прыгающий мяч</title>
 </head>
 <body>
-<canvas id="canvas" width="200" height="200"></canvas>
+<canvas id="canvas" width="500" height="300"></canvas>
 <script>
+
 var canvas = document.getElementById('canvas')
 var ctx = canvas.getContext('2d')
 
+var width = canvas.width;
+var height = canvas.height;
+
 var Ball = function () {
-  this.x = 100
-  this.y = 100
-  this.xSpeed = -2
-  this.ySpeed = 3
+  this.x = 250
+  this.y = 150
+  this.xSpeed = Math.floor(Math.random() * 10 - 5)
+  this.ySpeed = Math.floor(Math.random() * 10 - 5)
+  var colors = ["Red", "Orange", "Yellow", "Green", "Blue", "Purple"]
+  this.color = pickRandomColor(colors)
 }
+
+var pickRandomColor = function (colors) {
+  return colors[Math.floor(Math.random() * colors.length)];
+};
 
 var circle = function (x, y, radius, fillCircle) {
   ctx.beginPath()
@@ -28,32 +38,39 @@ var circle = function (x, y, radius, fillCircle) {
 }
 
 Ball.prototype.draw = function () {
-  circle(this.x, this.y, 3, true)
+  ctx.fillStyle = this.color
+  circle(this.x, this.y, 20, true)
 }
 Ball.prototype.move = function () {
   this.x += this.xSpeed;
   this.y += this.ySpeed
 }
 Ball.prototype.checkCollision = function () {
-  if (this.x < 0 || this.x > 200) {
+  if (this.x < 15 || this.x > 485) {
     this.xSpeed = -this.xSpeed
   }
-  if (this.y < 0 || this.y > 200) {
+  if (this.y < 15 || this.y > 285) {
     this.ySpeed = -this.ySpeed
   }
 }
 
 var ball = new Ball()
+var ballsArr = [];
+for (var i = 0; i < 10; i++) {
+  ballsArr.push(new Ball());
+}
 
 setInterval(function () {
-  ctx.clearRect(0, 0, 200, 200)
-
-  ball.draw()
-  ball.move()
-  ball.checkCollision()
-
-ctx.strokeRect(0, 0, 200, 200)
+  ctx.clearRect(0, 0, width, height)
+  for (let i = 0; i < ballsArr.length; i++) {
+    ballsArr[i].draw()
+    ballsArr[i].move()
+    ballsArr[i].checkCollision()
+  }
+  ctx.lineWidth = 5
+  ctx.strokeRect(0, 0, width, height)
 }, 30)
+
 </script>
 </body>
 </html>
